--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -10,7 +10,8 @@ $color-medium-grey: #8b8b8b;
 $color-white: #ffffff;
 
 // Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
+$family-sans-serif: "Open Sans", sans-serif;
+// $body-family: "Open Sans", sans-serif;
 $primary: $color-primary;
 $body-color: $color-medium-grey;
 $link: $color-primary;
