--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,6 +1,6 @@
 /*! bulma.io v0.9.2 | MIT License | github.com/jgthms/bulma */
 /* Bulma Utilities */
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Poppins:wght@400;500;600&display=swap");
 .button, .input, .textarea, .select select, .file-cta,
 .file-name, .pagination-previous,
 .pagination-next,
@@ -7767,7 +7767,11 @@ html {
   font-family: "Hatolie";
   src: url("/fonts/Hatolie.ttf") format("truetype"); }
 
+body {
+  font-family: "Open Sans", sans-serif; }
+
 .title {
+  font-family: "Poppins";
   color: #0a0a0a;
   font-size: 2rem; }
   @media only screen and (min-width: 768px) {
