--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -1,4 +1,9 @@
 .navbar-item {
+  color: $color-black !important; 
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  @include transition;
   
   &:hover {
     color: $color-primary !important; 
@@ -9,6 +14,75 @@
   padding: 0;
 }
 
+.hero {
+  @include transition;
+  @include background-center;
+
+  &__image {
+    width: 500px;
+    display: block;
+    margin: auto;
+    padding: 3.5rem 0;
+    @include breakpoint(tablet) {
+    }
+  }
+
+  &__home {
+    background-image: url('/images/home-hero.jpg');
+  }
+  
+  &__pricing {
+    background-image: url('/images/pricing-hero.jpg');
+    height: 30vh;
+
+    @include breakpoint(desktop) {
+      height: 45vh;
+    }
+  }
+}
+
+i {
+  color: $color-primary;
+  margin-right: 5px;
+}
+
+a .fa-facebook-official {
+  color: #3B5998;
+}
+
+a .fa-instagram {
+  background-image: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+  background-clip: text;
+  -webkit-background-clip: text;
+ color: transparent;
+}
+
 .footer {
   background-color: $color-white !important;
+
+  &__link {
+    @include transition;
+    color: $color-black;
+    &:hover {
+      color: $color-primary;
+    }
+  }
+}
+
+hr {
+  border: 0;
+  height: 6px;
+  width: 120px;
+  position: relative;
+  margin: 0 auto 50px;
+  background: $color-primary;
+}
+
+.button.is-link {
+  background-color: $color-primary;
+  @include transition;
+
+  &:hover {
+    background-color: lighten($color-primary, 10%);
+  }
 }
